--- a/.env
+++ b/.env
@@ -3,10 +3,10 @@ APP_ENV=local
 APP_KEY=base64:JQXNOsTm2BKqHB6xLjzOAi6M4MMGofockxnaxSw4ZLk=
 APP_DEBUG=true
 # local
-APP_URL=http://localhost
+#APP_URL=http://localhost
 
 # online 
-#APP_URL=https://vl.narayanaseva.org
+APP_URL=https://vl.narayanaseva.org
 
 
 APP_LOCALE=en
@@ -30,14 +30,14 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 
 #local
-DB_DATABASE=donation_project
-DB_USERNAME=root
-DB_PASSWORD=mysql
+# DB_DATABASE=donation_project
+# DB_USERNAME=root
+# DB_PASSWORD=mysql
 
 #online
-# DB_DATABASE=volunteerapp
-# DB_USERNAME=volunteerappuser
-# DB_PASSWORD=7e$r@#us#D1ZsoO60
+DB_DATABASE=volunteerapp
+DB_USERNAME=volunteerappuser
+DB_PASSWORD=7e$r@#us#D1ZsoO60
 
 
 
