--- a/.env
+++ b/.env
@@ -1,13 +1,8 @@
-﻿APP_NAME=Narayan-Seva-Sansthan-Volunteer-Management-System
+﻿APP_NAME=NarayanSevaSansthan-VolunteerManagementSystem
 APP_ENV=local
 APP_KEY=base64:JQXNOsTm2BKqHB6xLjzOAi6M4MMGofockxnaxSw4ZLk=
 APP_DEBUG=true
-# local
-#APP_URL=http://localhost
-
-# online 
-APP_URL=https://vl.narayanaseva.org
-
+APP_URL=http://localhost
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -28,24 +23,15 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-
-#local
-# DB_DATABASE=donation_project
-# DB_USERNAME=root
-# DB_PASSWORD=mysql
-
-#online
-DB_DATABASE=volunteerapp
-DB_USERNAME=volunteerappuser
-DB_PASSWORD=7e$r@#us#D1ZsoO60
-
-
+DB_DATABASE=donation_project
+DB_USERNAME=root
+DB_PASSWORD=mysql
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
-# SESSION_DOMAIN=null
+SESSION_DOMAIN=null
 
 BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
@@ -67,7 +53,7 @@ MAIL_HOST=127.0.0.1
 MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
-MAIL_FROM_ADDRESS="no-reply@narayanseva.org"
+MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
